[package]
name = "biasedrc"
version = "0.1.0"
edition = "2024"
description = "An implementation of biased-reference counting"
categories = ["concurrency", "rust-patterns", "memory-management"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Techcable/biasedrc.rs"
keywords = ["biasedrc", "arc", "rc"]

[features]
# Use the nightly pointer metadata feature instead of the stable one
#
# Removing this feature could break some code,
# as it means you will need to use the ptr_meta crate instead.
nightly-ptr-meta = []
# Use the nightly pointer coercison feature, to avoid needing the `unsize` crate
#
# Removing this feature could break some code,
# but adding it never will.
nightly-coerce = []
# Enable serde serialization support
serde = ["dep:serde"]

[dependencies]

# Concurrency
atomic = "0.6"
boxcar = "0.2"
crossbeam-queue = "0.3"

# Polyfills for nightly features
ptr-meta-stable = { package = "ptr_meta", version = "0.3", default-features = false }
unsize = "1.1"

# Utilities
arbitrary-int = "2"
bytemuck = { version = "1", features = ["derive"] }
nounwind = { version = "0.1", features = ["std"], default-features = false }
thiserror = "2"

# Third-party integration
arc-swap = { version = "1.7", optional = true }
archery = "1"
serde = { package = "serde_core", version = "1", optional = true }
stable_deref_trait = "1.2"

[dev-dependencies]
criterion = "0.8"
crossbeam-channel = "0.5"
imbl = "6.1"
rand = { version = "0.9", features = ["small_rng"] }
rpds = "1.2"
triomphe = "0.1"

[[bench]]
name = "basic"
harness = false

[[bench]]
path = "benches/rpds/rpds_hash_trie_map.rs"
name = "rpds_hash_trie_map"
harness = false

[[bench]]
path = "benches/rpds/rpds_hash_trie_map_brc.rs"
name = "rpds_hash_trie_map_brc"
harness = false

[[bench]]
path = "benches/rpds/rpds_hash_trie_map_sync.rs"
name = "rpds_hash_trie_map_sync"
harness = false

[[bench]]
path = "benches/rpds/rpds_list.rs"
name = "rpds_list"
harness = false

[[bench]]
path = "benches/rpds/rpds_list_brc.rs"
name = "rpds_list_brc"
harness = false

[[bench]]
path = "benches/rpds/rpds_list_sync.rs"
name = "rpds_list_sync"
harness = false

[[bench]]
path = "benches/rpds/rpds_vector.rs"
name = "rpds_vector"
harness = false

[[bench]]
path = "benches/rpds/rpds_vector_brc.rs"
name = "rpds_vector_brc"
harness = false

[[bench]]
path = "benches/rpds/rpds_vector_sync.rs"
name = "rpds_vector_sync"
harness = false

[[bench]]
name = "persistent_hashmap"
path = "benches/imbl/persistent_hashmap.rs"
harness = false

[[bench]]
name = "persistent_ordmap"
path = "benches/imbl/persistent_ordmap.rs"
harness = false

[[bench]]
name = "persistent_vector"
path = "benches/imbl/persistent_vector.rs"
harness = false

[profile.bench]
debug = true

[lints.rust]
unsafe-op-in-unsafe-fn = "deny"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(biasedrc_no_implicit_collect)']

[lints.clippy]
## groups ##
cargo = { priority = -1, level = "warn" }
pedantic = { level = "warn", priority = -1 }

# misc restrictions
redundant_test_prefix = "warn" # name test_foo is redundant with #[test] attr

# safety
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "allow"

## aggressively lint casts ##
# in an ideal world, overflowing casts would panic
# linting them (with deny) is the second best option
cast-possible-truncation = "deny"
cast-possible-wrap = "deny"
cast-precision-loss = "deny"
cast-sign-loss = "deny"
char-lit-as-u8 = "deny"
cast-ptr-alignment = "deny"
fn-to-numeric-cast = "deny"
fn-to-numeric-cast-any = "deny"
fn-to-numeric-cast-with-truncation = "deny"
cast-lossless = "allow" # lossless casts are fine, lints will catch if types change
ptr_as_ptr = "allow" # pointer casts are fine as long as they don't violate another rule

# excessively pedantic (even for clippy::pedantic)
too-many-lines = "allow"
must-use-candidate = "allow"
items-after-statements = "allow"
explicit-deref-methods = "allow"
single-match-else = "allow"
if-not-else = "allow"
needless-pass-by-value = "allow"
inline-always = "allow"
needless-continue = "allow"
needless-late-init = "allow"
