[package]
name = "biasedrc"
version = "0.1.0"
edition = "2024"
description = "An implementation of biased-reference counting"
categories = ["concurrency", "rust-patterns", "memory-management"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Techcable/biasedrc.rs"
keywords = ["biasedrc", "arc", "rc"]
# 1.83 - const Option::unwrap
# 1.84 - strict provenance API
# 1.85 - 2024 edition
# 1.90 - constants can reference mutable statics
rust-version = "1.90"

[features]
default = ["std"]
# Enable use of the standard library
#
# This feature is *required* to use this library,
# as we need to use std::thread_local!
std = ["ptr-meta-stable/std", "serde?/std"]

# Enable all recommended features on the nightly channel.
#
# These features make Brc easier to use and a better drop-in replacement for Arc.
# However, taking advantage of these features could make it harder for your code to support stable rust.
nightly = [
    "nightly-ptr-meta",
    "nightly-coerce",
    "nightly-ptr-layout",
    "nightly-may-dangle",
    # This is a very reasonable assumption.
    # It is less likely to break than any of the official nightly features.
    "unsafe-assume-osstr-layout",
]
# Use the nightly pointer metadata feature instead of the stable one
#
# Removing this feature could break some code,
# as it means you will need to use the ptr_meta crate instead.
nightly-ptr-meta = []
# Use the nightly pointer coercison feature, to avoid needing the `unsize` crate
#
# Removing this feature could break some code,
# but adding it never will.
nightly-coerce = []
# Use the nightly allocator API intead of the `allocator_api2` polyfill.
#
# Adding this feature can break code that assumes `allocator_api2` is being used.
nightly-allocator = []
# Use the nightly `layout_for_ptr` feature.
#
# This is currently necessary to support `Weak` pointers for non-sized targets
nightly-ptr-layout = ["nightly-ptr-meta"]
# Use the nightly `#[may_dangle]` attribute to relax dropcheck requiremets
#
# See the "Drop Check" section of the nomicon for details.
nightly-may-dangle = []
# Enable serde serialization support
serde = ["dep:serde"]
# Implement archery::SharedPointerKind
archery = ["dep:archery"]

# Disable implicit calls to `collect`, relying on manual calls instead.
#
# This is an advanced feature which can cause memory leaks if used incorrectly.
implicit-collect-disable = []

# Assume that OsStr and Path are #[repr(transparent)] wrappers around [u8]
#
# This is true in practice for all supported versions of the standard library,
# but is not an official guarentee and could change in the future.
# In practice, such a change is unlikely to occur.
# This assumption is necessary to implement `From<OsStr>` and friends.
unsafe-assume-osstr-layout = []
# Assume that CStr is a #[repr(transparent)] wrappers around [u8]
#
# This is true in practice for all supported versions of the standard library,
# but is not an official guarentee and may change in the future.
# In fact, the comments in the stdlib incdicate a desire to make CStr a thin-pointer in the future.
# This would break this assumption and require changes.
unsafe-assume-cstr-layout = []

[dependencies]

# Concurrency
atomic = "0.6"
boxcar = "0.2"
crossbeam-queue = "0.3"

# Polyfills for nightly features
allocator-api2 = "0.4"
ptr-meta-stable = { package = "ptr_meta", version = "0.3", default-features = false }
unsize = "1.1"

# Utilities
arbitrary-int = "2"
bytemuck = { version = "1", features = ["derive"] }
cfg-if = "1"
nounwind = { version = "0.1.2", features = ["std"], default-features = false }
thiserror = "2"

# Third-party integration
arc-swap = { version = "1.7", optional = true }
archery = { version = "1", optional = true }
arrayvec = { version = "0.7", optional = true, default-features = false }
serde = { package = "serde_core", version = "1", optional = true, default-features = false }
stable_deref_trait = "1.2"

[dev-dependencies]
criterion = "0.8"
crossbeam-channel = "0.5"
imbl = "6.1"
rand = { version = "0.9", features = ["small_rng"] }
rpds = "1.2"
triomphe = "0.1"

[[bench]]
name = "basic"
harness = false

[[bench]]
path = "benches/rpds/rpds_hash_trie_map.rs"
name = "rpds_hash_trie_map"
harness = false
required-features = ["archery"]

[[bench]]
path = "benches/rpds/rpds_hash_trie_map_brc.rs"
name = "rpds_hash_trie_map_brc"
harness = false
required-features = ["archery"]

[[bench]]
path = "benches/rpds/rpds_hash_trie_map_sync.rs"
name = "rpds_hash_trie_map_sync"
harness = false
required-features = ["archery"]

[[bench]]
path = "benches/rpds/rpds_list.rs"
name = "rpds_list"
harness = false
required-features = ["archery"]

[[bench]]
path = "benches/rpds/rpds_list_brc.rs"
name = "rpds_list_brc"
harness = false
required-features = ["archery"]

[[bench]]
path = "benches/rpds/rpds_list_sync.rs"
name = "rpds_list_sync"
harness = false
required-features = ["archery"]

[[bench]]
path = "benches/rpds/rpds_vector.rs"
name = "rpds_vector"
harness = false
required-features = ["archery"]

[[bench]]
path = "benches/rpds/rpds_vector_brc.rs"
name = "rpds_vector_brc"
harness = false
required-features = ["archery"]

[[bench]]
path = "benches/rpds/rpds_vector_sync.rs"
name = "rpds_vector_sync"
harness = false
required-features = ["archery"]

[[bench]]
name = "persistent_hashmap"
path = "benches/imbl/persistent_hashmap.rs"
harness = false
required-features = ["archery"]

[[bench]]
name = "persistent_ordmap"
path = "benches/imbl/persistent_ordmap.rs"
harness = false
required-features = ["archery"]

[[bench]]
name = "persistent_vector"
path = "benches/imbl/persistent_vector.rs"
harness = false
required-features = ["archery"]

[profile.bench]
debug = true

[lints.rust]
unsafe-op-in-unsafe-fn = "deny"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(biasedrc_no_implicit_collect)',
    'cfg(biasedrc_no_implicit_collect_clone)',
    'cfg(biasedrc_no_implicit_collect_drop)',
]

[lints.clippy]
## groups ##
cargo = { priority = -1, level = "warn" }
pedantic = { level = "warn", priority = -1 }

# restrictions
redundant_test_prefix = "warn" # name test_foo is redundant with #[test] attr

# safety
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "allow"

## aggressively lint casts ##
# in an ideal world, overflowing casts would panic
# linting them (with deny) is the second best option
cast-possible-truncation = "deny"
cast-possible-wrap = "deny"
cast-precision-loss = "deny"
cast-sign-loss = "deny"
char-lit-as-u8 = "deny"
cast-ptr-alignment = "deny"
fn-to-numeric-cast = "deny"
fn-to-numeric-cast-any = "deny"
fn-to-numeric-cast-with-truncation = "deny"
cast-lossless = "allow" # lossless casts are fine, lints will catch if types change
ptr_as_ptr = "allow" # pointer casts are fine as long as they don't violate another rule

# excessively pedantic (even for clippy::pedantic)
too-many-lines = "allow"
must-use-candidate = "allow"
items-after-statements = "allow"
explicit-deref-methods = "allow"
single-match-else = "allow"
if-not-else = "allow"
needless-pass-by-value = "allow"
inline-always = "allow"
needless-continue = "allow"
needless-late-init = "allow"
