[package]
name = "benchmark-biasedrc"
version = "0.0.0"
edition = "2024"
publish = false # not for public use

[dependencies]
archery = "1"
biasedrc = { path = "..", features = ["archery"] }

[dev-dependencies]
criterion = "0.8"
imbl = "6.1"
rand = { version = "0.9", features = ["small_rng"] }
rpds = "1.2"
triomphe = "0.1"

[lints]
workspace = true

[[bench]]
name = "basic"
path = "basic.rs"
harness = false

[[bench]]
path = "rpds/rpds_hash_trie_map.rs"
name = "rpds_hash_trie_map"
harness = false

[[bench]]
path = "rpds/rpds_hash_trie_map_brc.rs"
name = "rpds_hash_trie_map_brc"
harness = false

[[bench]]
path = "rpds/rpds_hash_trie_map_sync.rs"
name = "rpds_hash_trie_map_sync"
harness = false

[[bench]]
path = "rpds/rpds_list.rs"
name = "rpds_list"
harness = false

[[bench]]
path = "rpds/rpds_list_brc.rs"
name = "rpds_list_brc"
harness = false

[[bench]]
path = "rpds/rpds_list_sync.rs"
name = "rpds_list_sync"
harness = false

[[bench]]
path = "rpds/rpds_vector.rs"
name = "rpds_vector"
harness = false

[[bench]]
path = "rpds/rpds_vector_brc.rs"
name = "rpds_vector_brc"
harness = false

[[bench]]
path = "rpds/rpds_vector_sync.rs"
name = "rpds_vector_sync"
harness = false

[[bench]]
name = "persistent_hashmap"
path = "imbl/persistent_hashmap.rs"
harness = false

[[bench]]
name = "persistent_ordmap"
path = "imbl/persistent_ordmap.rs"
harness = false

[[bench]]
name = "persistent_vector"
path = "imbl/persistent_vector.rs"
harness = false
